$Id: History,v 1.24 2002-10-22 13:18:43 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct, 22th 2002 M.Dressel internal_7_geombias-V04-01-01
     - renaming G4VPScorer to G4VScorer and  
                G4PStep to G4GeometryCellStep 
     - moving interfaces G4VCellScorer and G4VCellScorerStore to intercoms
     - adding comments 

Oct. 16th 2002 M.Dressel internal_6_geombias-V04-01-01
     - changes recomanded by codewizard
     - stream, and string conversion from file G4Nsplit_Weight.hh/.cc
       to G4StringConversion.hh/.cc

Oct. 15th 2002 M.Dressel
     removing G4Pstring with G4StringConversion

Oct. 14th 2002 M.Dressel 
     cleanup according to codewizzard

Oct. 10th 2002 M.Dressel geombias-V04-01-01-internal-5
     change in G4(V)ImportanceAlgorithm, G4ImportanceSplitExaminer
     G4ImportanceFinder: give pre and post importance 
     separatly insted only ipre/ipost.

Sep, 2th 2002 M.Dressel geombias-V04-01-01-internal-4
     moved files concerning messaging a importance geometry to
     /afs/cern.ch/user/d/dressel/G4/IGeoMessangers.
     Support will be given on demand. 

Sep, 2th 2002 M.Dressel geombias-V04-01-01-internal-3
     code cleanup for code-wizard
